[#177 state:resolved] added table to description so it wraps correctly

--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -95,17 +95,20 @@ label.checkbox_label {
 }
 
 .form_row_wrap_label {
-  white-space: auto;
+  white-space: normal;
   padding-bottom: .5em;
 }
 
 select.fixed_width {
   width: 60%;
-
 }
 
 .form_row form {
   display: inline;
+}
+
+.description {
+  white-space: normal;
 }
 
 .submit {
